--- a/index.html
+++ b/index.html
@@ -169,7 +169,7 @@
   <!-- Firebase + JavaScript -->
   <script type="module">
     import { initializeApp } from "https://www.gstatic.com/firebasejs/10.12.2/firebase-app.js";
-    import { getFirestore, doc, setDoc } from "https://www.gstatic.com/firebasejs/10.12.2/firebase-firestore.js";
+    import { getFirestore, doc, setDoc, getDoc } from "https://www.gstatic.com/firebasejs/10.12.2/firebase-firestore.js";
 
     const firebaseConfig = {
       apiKey: "AIzaSyBZZGMEtMsgd1igtipcG84tz98K9Tokb34",
@@ -186,16 +186,32 @@
 
     const urlParams = new URLSearchParams(window.location.search);
     const userId = urlParams.get('id');
+    const referrerId = urlParams.get('ref');
 
     if (userId) {
-      const referralLink = `https://t.me/MigaMining?start=${userId}`;
+      const referralLink = `https://t.me/Migamining_bot?start=${userId}`;
       document.getElementById('inviteLink').textContent = referralLink;
 
-      await setDoc(doc(db, "users", userId), {
-        userId: userId,
-        referralLink: referralLink,
-        joinedAt: new Date().toISOString()
-      });
+      const userRef = doc(db, "users", userId);
+      const userSnap = await getDoc(userRef);
+
+      if (!userSnap.exists()) {
+        await setDoc(userRef, {
+          userId: userId,
+          referralLink: referralLink,
+          invitedAt: new Date().toISOString(),
+          referrerId: referrerId || null
+        });
+
+        if (referrerId && referrerId !== userId) {
+          const referralPath = doc(db, "referrals", `${userId}`);
+          await setDoc(referralPath, {
+            userId: userId,
+            referrerId: referrerId,
+            referredAt: new Date().toISOString()
+          });
+        }
+      }
     }
   </script>
 
