--- a/index.html
+++ b/index.html
@@ -1,21 +1,49 @@
 <!doctype html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">      
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">      
+  <meta charset="UTF-8" />      
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />      
   <title>Miga Mining App - Friends</title>      
   <script src="https://telegram.org/js/telegram-web-app.js"></script>
-  <link href="https://fonts.googleapis.com/css2?family=Cairo:wght@400;600;700&display=swap" rel="stylesheet">      
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">      
-  <style>
+  <link href="https://fonts.googleapis.com/css2?family=Cairo:wght@400;600;700&display=swap" rel="stylesheet" />      
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css" />      
+  <style>      
+    :root {
+      --primary: #0066cc;
+      --secondary: #004d99;
+      --accent: #ff9900;
+      --dark: #001a33;
+      --light: #f0f7ff;
+      --success: #28a745;
+      --danger: #dc3545;
+      --warning: #ffc107;
+      --bronze: #cd7f32;
+      --silver: #c0c0c0;
+      --gold: #ffd700;
+      --platinum: #e5e4e2;
+      --diamond: #b9f2ff;
+    }
+    * {
+      margin: 0;
+      padding: 0;
+      box-sizing: border-box;
+    }
     body {
       font-family: 'Cairo', sans-serif;
       background: linear-gradient(135deg, #001a33, #003366);
-      color: #f0f7ff;
+      color: var(--light);
       min-height: 100vh;
       padding: 10px 0 70px;
       text-align: center;
       font-size: 14px;
+    }
+    img.invite-image {
+      width: 90%;
+      max-width: 400px;
+      margin: 20px auto 10px;
+      display: block;
+      border-radius: 12px;
+      box-shadow: 0 0 15px rgba(0,0,0,0.3);
     }
     .invite-container {
       max-width: 480px;
@@ -23,49 +51,133 @@
       background-color: rgba(0, 40, 80, 0.5);
       border-radius: 10px;
       padding: 15px;
+      box-shadow: 0 0 10px rgba(0, 0, 0, 0.4);
     }
     .invite-link-box {
       background-color: rgba(0, 51, 102, 0.8);
       border-radius: 8px;
       padding: 12px 15px;
       margin: 15px auto 10px;
-      word-break: break-word;
+      word-break: break-all;
       font-size: 16px;
       cursor: pointer;
       user-select: all;
+      box-shadow: 0 0 8px rgba(182, 79, 200, 0.5);
     }
     .copy-button {
-      background-color: #ff9900;
+      display: inline-block;
+      margin-top: 8px;
+      background-color: var(--accent);
       color: #001a33;
       border: none;
       border-radius: 8px;
       padding: 10px 25px;
       font-size: 14px;
       cursor: pointer;
-      margin: 5px;
+      user-select: none;
+      transition: background-color 0.3s ease;
+      font-weight: bold;
+    }
+    .copy-button:hover {
+      background-color: #ffaa00;
+    }
+    .copy-message {
+      margin-top: 10px;
+      font-size: 14px;
+      color: var(--success);
+      height: 18px;
+      opacity: 0;
+      transition: opacity 0.5s ease;
+    }
+    .copy-message.visible {
+      opacity: 1;
+    }
+    .bottom-nav {
+      position: fixed;
+      bottom: 0;
+      width: 100%;
+      background: rgba(10, 30, 50, 0.95);
+      display: flex;
+      justify-content: space-around;
+      padding: 8px 0;
+      border-top: 1px solid rgba(0, 51, 102, 0.8);
+      z-index: 999;
+    }
+    .nav-item {
+      text-align: center;
+      color: #aaa;
+      font-size: 10px;
+      cursor: pointer;
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      gap: 2px;
+      padding: 3px 10px;
+      flex: 1;
+      max-width: 20%;
+    }
+    .nav-item i {
+      font-size: 16px;
+    }
+    .nav-item.active {
+      color: var(--accent);
     }
     #invitedList {
       margin-top: 10px;
       list-style: none;
       padding: 0;
+      font-size: 14px;
+      text-align: left;
     }
     #invitedList li {
-      padding: 5px;
-      text-align: left;
+      padding: 5px 10px;
     }
   </style>
 </head>
 <body>
-  <div class="invite-container">
-    <h2>Invite Friends</h2>
-    <p>Invite a friend and get <strong>100 Miga</strong></p>
-    <div id="inviteLink" class="invite-link-box">Loading...</div>
-    <button id="copyBtn" class="copy-button">📋 Copy link</button>
-    <div style="margin-top: 10px;">Friends invited: <strong id="invitedCount">0</strong></div>
-    <ul id="invitedList"></ul>
+
+  <div id="friends-tab" class="tab-content active">
+    <img class="invite-image" src="https://i.ibb.co/k21jPLDd/refer-friend-concept-illustration.png" alt="Invite Friends" />
+    <div class="invite-container">
+      <div style="font-weight: bold; font-size: 22px; margin-bottom: 10px;">Invite Friends</div>
+      <div style="font-size: 16px; margin-bottom: 8px;">Invite a friend and get <strong>100 Miga</strong></div>
+      <div style="font-size: 14px; margin-bottom: 10px; color: #aee9f7;">
+        Earn 100 Miga for each friend. Invite 10 friends and get a free mining plan!
+      </div>
+      <div id="inviteLink" class="invite-link-box" title="Click to copy link">Loading...</div>
+      <button id="copyBtn" class="copy-button">📋 Copy link</button>
+      <button onclick="shareLink()" class="copy-button">📤 Share</button>
+      <div id="copyMsg" class="copy-message">Link copied!</div>
+      <div style="margin-top: 15px; font-size: 15px;">
+        Friends invited: <strong id="invitedCount">0</strong>
+      </div>
+      <ul id="invitedList"></ul>
+    </div>
   </div>
 
-  <!-- Firebase + WebApp -->
+  <div class="bottom-nav">
+    <div class="nav-item" data-tab="home-tab">
+      <i class="fas fa-home"></i>
+      <span>Home</span>
+    </div>
+    <div class="nav-item active" data-tab="friends-tab">
+      <i class="fas fa-user-friends"></i>
+      <span>Friends</span>
+    </div>
+    <div class="nav-item" data-tab="mining-tab">
+      <i class="fas fa-digging"></i>
+      <span>Mining</span>
+    </div>
+    <div class="nav-item" data-tab="tasks-tab">
+      <i class="fas fa-tasks"></i>
+      <span>Tasks</span>
+    </div>
+    <div class="nav-item" data-tab="leaders-tab">
+      <i class="fas fa-trophy"></i>
+      <span>Leaders</span>
+    </div>
+  </div>
+
   <script type="module">
     import { initializeApp } from "https://www.gstatic.com/firebasejs/10.12.2/firebase-app.js";
     import {
@@ -95,12 +207,17 @@
 
     window.Telegram.WebApp.ready();
 
-    const tg = window.Telegram.WebApp;
-    const userId = tg.initDataUnsafe?.user?.id?.toString();
-    const name = tg.initDataUnsafe?.user?.first_name || "Anonymous";
-    const referrerId = tg.initDataUnsafe?.start_param || null;
+    async function main() {
+      const tg = window.Telegram.WebApp;
+      const userId = tg.initDataUnsafe?.user?.id?.toString();
+      const name = tg.initDataUnsafe?.user?.first_name || "Anonymous";
+      const referrerId = tg.initDataUnsafe?.start_param || null;
 
-    if (userId) {
+      if (!userId) {
+        alert("Can't get Telegram user ID!");
+        return;
+      }
+
       const referralLink = `https://t.me/Migamining_bot?start=${userId}`;
       document.getElementById("inviteLink").textContent = referralLink;
 
@@ -135,9 +252,11 @@
       document.getElementById("invitedCount").textContent = referralsSnap.size;
 
       const invitedList = document.getElementById("invitedList");
+      invitedList.innerHTML = "";
+
       for (const docSnap of referralsSnap.docs) {
         const referredId = docSnap.data().userId;
-        const referredUserRef = doc(db, "users", referredId.toString());
+        const referredUserRef = doc(db, "users", referredId);
         const referredUserSnap = await getDoc(referredUserRef);
 
         const friendName = referredUserSnap.exists() && referredUserSnap.data().name
@@ -149,16 +268,15 @@
         invitedList.appendChild(li);
       }
     }
-  </script>
 
-  <script>
+    main();
+
+    // النسخ
     const copyBtn = document.getElementById("copyBtn");
-    copyBtn.addEventListener("click", () => {
-      const text = document.getElementById("inviteLink").textContent.trim();
+    const inviteLink = document.getElementById("inviteLink");
+    const copyMsg = document.getElementById("copyMsg");
+
+    function copyText(text) {
       navigator.clipboard.writeText(text).then(() => {
-        alert("Link copied!");
-      });
-    });
-  </script>
-</body>
-</html>
+        copyMsg.classList.add("visible");
+        setTimeout(() => copyMsg.classList.remove
