--- a/index.html
+++ b/index.html
@@ -1,12 +1,11 @@
 <!doctype html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8" />      
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />      
+  <meta charset="UTF-8">      
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">      
   <title>Miga Mining App - Friends</title>      
-  <script src="https://telegram.org/js/telegram-web-app.js"></script>
-  <link href="https://fonts.googleapis.com/css2?family=Cairo:wght@400;600;700&display=swap" rel="stylesheet" />      
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css" />      
+  <link href="https://fonts.googleapis.com/css2?family=Cairo:wght@400;600;700&display=swap" rel="stylesheet">      
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">      
   <style>      
     :root {
       --primary: #0066cc;
@@ -137,14 +136,14 @@
 <body>
 
   <div id="friends-tab" class="tab-content active">
-    <img class="invite-image" src="https://i.ibb.co/k21jPLDd/refer-friend-concept-illustration.png" alt="Invite Friends" />
+    <img class="invite-image" src="https://i.ibb.co/k21jPLDd/refer-friend-concept-illustration.png" alt="Invite Friends">
     <div class="invite-container">
       <div style="font-weight: bold; font-size: 22px; margin-bottom: 10px;">Invite Friends</div>
       <div style="font-size: 16px; margin-bottom: 8px;">Invite a friend and get <strong>100 Miga</strong></div>
       <div style="font-size: 14px; margin-bottom: 10px; color: #aee9f7;">
         Earn 100 Miga for each friend. Invite 10 friends and get a free mining plan!
       </div>
-      <div id="inviteLink" class="invite-link-box" title="Click to copy link">Loading...</div>
+      <div id="inviteLink" class="invite-link-box">Loading...</div>
       <button id="copyBtn" class="copy-button">📋 Copy link</button>
       <button onclick="shareLink()" class="copy-button">📤 Share</button>
       <div id="copyMsg" class="copy-message">Link copied!</div>
@@ -178,6 +177,7 @@
     </div>
   </div>
 
+  <!-- Firebase + JavaScript -->
   <script type="module">
     import { initializeApp } from "https://www.gstatic.com/firebasejs/10.12.2/firebase-app.js";
     import {
@@ -205,42 +205,34 @@
     const app = initializeApp(firebaseConfig);
     const db = getFirestore(app);
 
-    window.Telegram.WebApp.ready();
+    const tg = window.Telegram?.WebApp;
+    if (!tg) {
+      alert("Please open this page inside Telegram app.");
+      throw new Error("Telegram WebApp not found");
+    }
 
-    async function main() {
-      const tg = window.Telegram.WebApp;
-      const userId = tg.initDataUnsafe?.user?.id?.toString();
-      const name = tg.initDataUnsafe?.user?.first_name || "Anonymous";
-      const referrerId = tg.initDataUnsafe?.start_param || null;
+    const user = tg.initDataUnsafe?.user;
+    if (!user || !user.id) {
+      alert("User data not found. Please open inside Telegram app.");
+      throw new Error("User data not available");
+    }
 
-      if (!userId) {
-        alert("Can't get Telegram user ID!");
-        return;
-      }
+    const userId = user.id.toString();
 
+    async function setupReferral() {
       const referralLink = `https://t.me/Migamining_bot?start=${userId}`;
-      document.getElementById("inviteLink").textContent = referralLink;
+      document.getElementById('inviteLink').textContent = referralLink;
 
       const userRef = doc(db, "users", userId);
       const userSnap = await getDoc(userRef);
 
       if (!userSnap.exists()) {
         await setDoc(userRef, {
-          userId,
-          referralLink,
+          userId: userId,
+          referralLink: referralLink,
           invitedAt: new Date().toISOString(),
-          referrerId: referrerId || null,
-          name
+          name: user.first_name || "Anonymous"
         });
-
-        if (referrerId && referrerId !== userId) {
-          const referralRef = doc(db, "referrals", userId);
-          await setDoc(referralRef, {
-            userId,
-            referrerId,
-            referredAt: new Date().toISOString()
-          });
-        }
       }
 
       const referralsQuery = query(
@@ -249,6 +241,7 @@
         orderBy("referredAt", "desc")
       );
       const referralsSnap = await getDocs(referralsQuery);
+
       document.getElementById("invitedCount").textContent = referralsSnap.size;
 
       const invitedList = document.getElementById("invitedList");
@@ -259,24 +252,61 @@
         const referredUserRef = doc(db, "users", referredId);
         const referredUserSnap = await getDoc(referredUserRef);
 
-        const friendName = referredUserSnap.exists() && referredUserSnap.data().name
+        const name = referredUserSnap.exists() && referredUserSnap.data().name
           ? referredUserSnap.data().name
           : `User ${referredId}`;
 
         const li = document.createElement("li");
-        li.textContent = `👤 ${friendName}`;
+        li.textContent = `👤 ${name}`;
         invitedList.appendChild(li);
       }
     }
 
-    main();
+    setupReferral();
 
-    // النسخ
-    const copyBtn = document.getElementById("copyBtn");
-    const inviteLink = document.getElementById("inviteLink");
-    const copyMsg = document.getElementById("copyMsg");
+  </script>
+
+  <script>
+    document.querySelectorAll('.nav-item').forEach(item => {
+      item.addEventListener('click', function () {
+        const tabId = this.getAttribute('data-tab');
+        window.location.href = tabId + '.html';
+      });
+    });
+
+    const inviteLink = document.getElementById('inviteLink');
+    const copyBtn = document.getElementById('copyBtn');
+    const copyMsg = document.getElementById('copyMsg');
 
     function copyText(text) {
       navigator.clipboard.writeText(text).then(() => {
-        copyMsg.classList.add("visible");
-        setTimeout(() => copyMsg.classList.remove
+        copyMsg.classList.add('visible');
+        setTimeout(() => {
+          copyMsg.classList.remove('visible');
+        }, 1500);
+      });
+    }
+
+    inviteLink.addEventListener('click', () => {
+      copyText(inviteLink.textContent.trim());
+    });
+
+    copyBtn.addEventListener('click', () => {
+      copyText(inviteLink.textContent.trim());
+    });
+
+    function shareLink() {
+      if (navigator.share) {
+        navigator.share({
+          title: 'Join Miga Mining!',
+          text: 'Get 100 Miga by joining through my link:',
+          url: inviteLink.textContent.trim()
+        }).catch(console.error);
+      } else {
+        copyText(inviteLink.textContent.trim());
+      }
+    }
+  </script>
+
+</body>
+</html>
